src/test/resources/valid_tests/SimpleNetworkSoftmax.cnna
architecture SimpleNetworkSoftmax{
    def input in
    def output out
    //comment
    
    in ->
    fullyConnected(units=64, no_bias=true)
    activation.tanh()
    output {
        fullyConnected(no_bias=true)
        activation.softmax()
    } -> out
}