src/test/resources/invalid_tests/DuplicateArgument.cnna
architecture DuplicateArgument{
    def input in
    def output out

    in ->
    fullyConnected(units=64, units=64)
    output {
        fullyConnected()
        activation.softmax()
    } -> out
}
